--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.8",
     "@astrojs/react": "^4.4.0",
-    "@tailwindcss/vite": "^4.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "astro": "^5.15.1",
-    "canvas-confetti": "^1.9.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14"
+    "tailwindcss": "^4.1.16",
+    "vitest": "^4.0.3"
   },
   "devDependencies": {
+    "jsdom": "^27.0.1",
     "tw-animate-css": "^1.4.0"
   }
 }
